@@ -6,6 +6,7 @@ Changelog
 
  * Fix: "Open Link in New Tab" on a right arrow in page explorer should open page list (Emily Horsman)
  * Fix: Using `order_by_relevance=False` when searching with PostgreSQL now works (Mitchel Cabuloy)
+ * StreamBlocks and Blocks allow custom `get_template` methods for overriding templates in instances (Christopher Bledsoe)
 
 1.12 LTS (xx.xx.xxxx) - IN DEVELOPMENT
 ~~~~~~~~~~~~~~~~~~~~~
